--- a/favorit_number.html
+++ b/favorit_number.html
@@ -61,9 +61,9 @@
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
                         </div>
                     </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link active_side_nav" href="#" id="setup-menu-link">
                         <div class="link-icon ml-3">
-                            <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
+                            <span class= ml-2"> Favorite Number</span>
                         </div>
                     </a>
                     <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
