--- a/project.html
+++ b/project.html
@@ -17,9 +17,9 @@
 
 <body>
     <main id="main-content">
-        <!-- sidebar section start -->
+        <!-- sidebar section  -->
         <section class="sidebar-content">
-            <div>
+            <div class="side_nav">
                 <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
@@ -27,40 +27,54 @@
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+
+                <a class="nav-link mt-3 " href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1 "> Dashboard</span>
+                        <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link active_sidnav" href="project.html">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Assign Details</span>
+                        <img src="assets/sidebar_icon/Shape.png" alt="" class="sidebar-icon-image">
+                        <span class="ml-2">Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Damage Image</span>
+                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class="sidebar-icon-image">
+                        <span class="ml-2">Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Checked By Projects</span>
+                        <img src="assets/sidebar_icon/Shape (2).png" alt="" class="sidebar-icon-image">
+                        <span class="ml-2">My Work</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> QC Projects</span>
+                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class=" sidebar-icon-image">
+                        <span class="ml-2">Checked By Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ms-1"> Final Check Projects</span>
+                        <img src="assets/sidebar_icon/Shape (3).png" alt="" class="sidebar-icon-image">
+                        <span class="ml-2">QC Projects</span>
+                    </div>
+                </a>
+                <a class="nav-link nav-sidevar-link" href="#">
+                    <div class="link-icon">
+                        <img src="assets/sidebar_icon/Shape (4).png" alt="" class="sidebar-icon-image">
+                        <span class=" ml-2">Final Check Projects</span>
+                    </div>
+                </a>
+                <a class="nav-link nav-sidevar-link" href="#">
+                    <div class="link-icon">
+                        <img src="assets/sidebar_icon/Shape (5).png" alt="" class="sidebar-icon-image">
+                        <span class="sidebar-link-text ml-2">Penalty</span>
                     </div>
                 </a>
             </div>
@@ -195,15 +209,16 @@
                                             :
                                         </a>
                                         <div class="dropdown-menu dropdown-menu-right  ">
-                                            
-                                            <a href="projectDetails.html"class="dropdown-item ">Details</a>
-                                            <a href="projectDetails.html"class="dropdown-item">Reason For Dealy</a>
-                                            <a href="projectDetails.html"class="dropdown-item">Hold Request</a>
-                                            <a href="projectDetails.html"class="dropdown-item">Duplicate File Request</a>
-                                            <a href="projectDetails.html"class="dropdown-item">Sample File Update</a>
-                                            <a href="projectDetails.html"class="dropdown-item">Change  File Check</a>
-                                            <a href="projectDetails.html"class="dropdown-item">Production Done</a>
-                                            
+
+                                            <a href="projectDetails.html" class="dropdown-item ">Details</a>
+                                            <a href="projectDetails.html" class="dropdown-item">Reason For Dealy</a>
+                                            <a href="projectDetails.html" class="dropdown-item">Hold Request</a>
+                                            <a href="projectDetails.html" class="dropdown-item">Duplicate File
+                                                Request</a>
+                                            <a href="projectDetails.html" class="dropdown-item">Sample File Update</a>
+                                            <a href="projectDetails.html" class="dropdown-item">Change File Check</a>
+                                            <a href="projectDetails.html" class="dropdown-item">Production Done</a>
+
                                         </div>
 
                                     </div>
