--- a/projectDetails.html
+++ b/projectDetails.html
@@ -17,56 +17,58 @@
 
 <body>
     <main id="main-content">
-        <!-- sidebar section start -->
+        <!-- sidebar section  -->
         <section class="sidebar-content">
-            <div>
-                <a class="nav-link" href="#">
+            <div class="side_nav">
+                <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
-                        <span class="ml-2"> Offshore IT</span>
+                        <span class="ms-1"> Offshore IT</span>
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+
+                <a class="nav-link mt-3 " href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2 "> Dashboard</span>
+                        <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link " href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape.png" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2">Projects</span>
+                        <span class="ml-2">Projects</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape (1).png" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2">Assign Details</span>
+                        <span class="ml-2">Assign Details</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape (2).png" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2">My Work</span>
+                        <span class="ml-2">My Work</span>
                     </div>
                 </a>
+
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
-                        <img src="assets/sidebar_icon/Shape (1).png alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2">Checked By Projects</span>
+                        <img src="assets/sidebar_icon/Shape (1).png" alt="" class="sidebar-icon-image">
+                        <span class="ml-2">Checked By Projects</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape (3).png" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2">QC Projects</span>
+                        <span class="ml-2">QC Projects</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape (4).png" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2">Final Check Projects</span>
+                        <span class=" ml-2">Final Check Projects</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
