--- a/sr-treamleader.html
+++ b/sr-treamleader.html
@@ -20,9 +20,9 @@
 <body>
 
     <main id="main-content">
-        <!-- sidebar section start -->
+        <!-- sidebar section  -->
         <section class="sidebar-content">
-            <div>
+            <div class="side_nav">
                 <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
@@ -30,43 +30,44 @@
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+
+                <a class="nav-link mt-3 active_sidnav" href="#">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1 "> Dashboard</span>
+                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
+                        <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link " href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Assign Details</span>
+                        <span class="ml-2"> Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Damage Image</span>
+                        <span class="ml-2"> Damage Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Checked By Projects</span>
+                        <span class=" ml-2">Checked By Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">QC Projects</span>
+                        <span class=" ml-2"> QC Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Final Check Projects</span>
+                        <span class="ml-2"> Final Check Projects</span>
                     </div>
                 </a>
-               
             </div>
             <div class="live-chat">
                 <p>Live Chat <span>(10)</span></p>
