--- a/client_Dashboard.html
+++ b/client_Dashboard.html
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="setup-menu">
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="ftp_list.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
                         </div>
@@ -64,7 +64,7 @@
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
                         </div>
                     </a>
-                    <a class="nav-link nav-sidevar-link" href="Favorite_Number.html" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="favorit_number.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
                         </div>
@@ -101,7 +101,7 @@
                         <span class="sidebar-link-text ml-2">Upload Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="index.html">
+                <a class="nav-link nav-sidevar-link" href="project_List.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project List</span>
@@ -139,7 +139,7 @@
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
                                 id="active-sidebar-icon-image">
                             <span class="sidebar-link-text ml-2">
-                                Setup
+                               Report
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
                         </div>
