--- a/manager-deshboard.html
+++ b/manager-deshboard.html
@@ -21,9 +21,9 @@
 <body>
 
     <main id="main-content">
-        <!-- sidebar section start -->
+        <!-- sidebar section  -->
         <section class="sidebar-content">
-            <div>
+            <div class="side_nav">
                 <a class="nav-link" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
@@ -31,61 +31,44 @@
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+
+                <a class="nav-link mt-3 active_sidnav" href="#">
+                    <div class="link-icon">
+                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
+                        <span class=" ml-2"> Dashboard</span>
+                    </div>
+                </a>
+                <a class="nav-link " href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1 "> Dashboard</span>
+                        <span class="ml-2"> Assign Details</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Projects</span>
+                        <span class="ml-2"> Damage Image</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Assign Details</span>
+                        <span class=" ml-2">Checked By Projects</span>
+                    </div>
+                </a>
+
+                <a class="nav-link nav-sidevar-link" href="#">
+                    <div class="link-icon">
+                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                        <span class=" ml-2"> QC Projects</span>
                     </div>
                 </a>
                 <a class="nav-link nav-sidevar-link" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1"> Checked By Projects</span>
+                        <span class="ml-2"> Final Check Projects</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
-                    <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">QC Projects</span>
-                    </div>
-                </a>
-                <a class="nav-link nav-sidevar-link" href="#">
-                    <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-1">Final Check Projects</span>
-                    </div>
-                </a>
-             
-                <div id="report">
-                    <a class="nav-link nav-sidevar-link" id="report-link">
-                        <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image" id="active-sidebar-icon-image">
-                            <span class="sidebar-link-text ml-2" id="report-text">
-                                Penalty
-                            </span>
-                            <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
-                        </div>
-                    </a>
-                    <div class="client-sumarry">
-                        <a class="nav-link nav-sidevar-link " href="#">
-                            <div class="link-icon">
-                                <span class="sidebar-link-text" id="Client_Summary_text">Pending Penalty</span>
-                            </div>
-                        </a>
-                    </div>
-                </div>
             </div>
             <div class="live-chat">
                 <p>Live Chat <span>(10)</span></p>
