--- a/project_List.html
+++ b/project_List.html
@@ -23,30 +23,31 @@
 
 <body>
     <main id="main-content">
-        <!-- sidebar section start -->
-        <section class="sidebar-content">
-            <div class="mx-3">
-                <a class="nav-link" href="#">
+          <!-- sidebar section start -->
+          <section class="sidebar-content">
+            <div class="mx-3 side_nav">
+                <a class="nav-link active" href="index.html">
                     <div class="top-link-icon">
                         <img src="assets/image 1.svg" alt="" class="sidebar-icon-image">
                         <span class="ms-1"> Offshore IT</span>
                     </div>
                 </a>
                 <hr class="solid-divider">
-                <a class="nav-link nav-sidevar-link mt-3" href="#">
+
+                <a class="nav-link mt-3" href="#">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
-                        <span class="sidebar-link-text ml-2 "> Dashboard</span>
+                        <span class=" ml-2"> Dashboard</span>
                     </div>
                 </a>
+
 
                 <!-- setup dropdown menu start  -->
                 <div id="Setup">
                     <a class="nav-link" id="setup-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
-                                id="active-sidebar-icon-image">
-                            <span class="sidebar-link-text ml-2">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <span class=" ml-2">
                                 Setup
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
@@ -54,7 +55,7 @@
                     </a>
                 </div>
                 <div class="setup-menu">
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="ftp_list.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
                         </div>
@@ -64,7 +65,7 @@
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Currency</span>
                         </div>
                     </a>
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="favorit_number.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> Favorite Number</span>
                         </div>
@@ -83,49 +84,49 @@
 
                 </div>
                 <!-- setup dropdown menu end  -->
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2"> Client List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload File</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="uploadImages.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Upload Image</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link active_sidnav" href="project_List.html">
                     <div class="link-icon">
-                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                        <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project List</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project Billing Quantity</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Payment For Approval</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Project For Invoice</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="index.html">
                     <div class="link-icon">
                         <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                         <span class="sidebar-link-text ml-2">Invoice List</span>
@@ -139,7 +140,7 @@
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image"
                                 id="active-sidebar-icon-image">
                             <span class="sidebar-link-text ml-2">
-                                Setup
+                                Report
                             </span>
                             <span class="report-icon"><img src="assets/icon22.png" alt=""></span>
                         </div>
