change style client Dashboard

--- a/FTP_LIST.html
+++ b/FTP_LIST.html
@@ -41,9 +41,9 @@
 
                 <!-- setup dropdown menu start  -->
                 <div id="Setup">
-                    <a class="nav-link" id="setup-link">
+                    <a class="nav-link active_side_nav" id="setup-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                             <span class=" ml-2">
                                 Setup
                             </span>
@@ -51,7 +51,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="setup-menu">
+                <div class="setup-menu d-block">
                     <a class="nav-link nav-sidevar-link active_sidnav" href="ftp_list.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text"> FTP List</span>
