--- a/client_project_report_samary.html
+++ b/client_project_report_samary.html
@@ -129,7 +129,7 @@
   
                 <!-- report dropdown memu start  -->
                 <div id="report">
-                    <a class="nav-link" id="report-link">
+                    <a class="nav-link active_side_nav" id="report-link">
                         <div class="link-icon">
                             <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
                             <samp class=" ml-2" id="setup-link-text">
@@ -141,7 +141,7 @@
                
                 </div>
                 <div class="client-sumarry">
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link active_sidnav" href="client_project_report_samary.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
                         </div>
