--- a/favorit_number.html
+++ b/favorit_number.html
@@ -40,9 +40,9 @@
 
                 <!-- setup dropdown menu start  -->
                 <div id="Setup">
-                    <a class="nav-link active_Link" id="setup-link">
+                    <a class="nav-link active_Link active_side_nav" id="setup-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                             <span class="ml-2" id="setup-link-text">
                                 Setup
                             </span>
