--- a/project.html
+++ b/project.html
@@ -46,7 +46,7 @@
                         <span class="ml-2">Assign Details</span>
                     </div>
                 </a>
-                <a class="nav-link nav-sidevar-link" href="#">
+                <a class="nav-link nav-sidevar-link" href="mywork.html">
                     <div class="link-icon">
                         <img src="assets/sidebar_icon/Shape (2).png" alt="" class="sidebar-icon-image">
                         <span class="ml-2">My Work</span>
