--- a/client_Dashboard.html
+++ b/client_Dashboard.html
@@ -146,7 +146,7 @@
                     </a>
                 </div>
                 <div class="client-sumarry">
-                    <a class="nav-link nav-sidevar-link" href="#" id="setup-menu-link">
+                    <a class="nav-link nav-sidevar-link" href="client_project_report_samary.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
                         </div>
