update chat page design

--- a/client_project_report_samary.html
+++ b/client_project_report_samary.html
@@ -131,7 +131,7 @@
                 <div id="report">
                     <a class="nav-link active_side_nav" id="report-link">
                         <div class="link-icon">
-                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image">
+                            <img src="assets/Shape.svg" alt="" class="sidebar-icon-image active-sidebar-icon-image">
                             <samp class=" ml-2" id="setup-link-text">
                                 Report
                             </samp>
@@ -140,7 +140,7 @@
                     </a>
                
                 </div>
-                <div class="client-sumarry">
+                <div class="client-sumarry  d-block">
                     <a class="nav-link nav-sidevar-link active_sidnav" href="client_project_report_samary.html" id="setup-menu-link">
                         <div class="link-icon ml-3">
                             <span class="sidebar-link-text ml-2" id="setup-link-text">Client Summary Report</span>
